--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Copy this file to `.env` and fill in your actual secrets.
+ALLOWED_ORIGINS=http://localhost:5173
 OPENAI_API_KEY=your-openai-key-here
 OPENAI_MODEL=gpt-4o-mini
 OPENAI_API_BASE_URL=https://api.openai.com/v1/chat/completions
 PERFORMANCE_API_KEY=your-pagespeed-key-here
 PERFORMANCE_API_BASE_URL=https://www.googleapis.com/pagespeedonline/v5/runPagespeed
+PERFORMANCE_API_STRATEGY=mobile
+SEO_API_KEY=optional-off-page-provider-key
+SEO_API_BASE_URL=https://your-offpage-provider.example/api
