updated scoring metric, broken link feature fix,

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ OPENAI_MODEL=gpt-4o-mini
 OPENAI_API_BASE_URL=https://api.openai.com/v1/chat/completions
 PERFORMANCE_API_KEY=your-pagespeed-key-here
 PERFORMANCE_API_BASE_URL=https://www.googleapis.com/pagespeedonline/v5/runPagespeed
-PERFORMANCE_API_STRATEGY=mobile
+PERFORMANCE_API_STRATEGY=mobile,desktop
 SEO_API_KEY=optional-off-page-provider-key
 SEO_API_BASE_URL=https://your-offpage-provider.example/api
